objects/SO_Work_Order__c.object
<CustomObject>
    <label>Work Order</label>
    <nameField>
        <displayFormat>WO-{00000000}</displayFormat>
        <label>Work Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SO_Age__c</fullName>
        <formula>If( SO_ABS_Complete__c == TRUE,  SO_ABS_Forecast__c - DATEVALUE(CreatedDate), TODAY() - DATEVALUE(CreatedDate))</formula>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_VIN__c</fullName>
        <formula>SO_Order__r.Opportunity.SO_Vehicle__r.OUV_Full_Vin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Brand__c</fullName>
        <formula>SO_Order__r.SO_Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Model__c</fullName>
        <formula>SO_Order__r.SO_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Engine__c</fullName>
        <formula>SO_Order__r.Opportunity.SO_Vehicle__r.SO_Engine__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Comments__c</fullName>
        <label>Start - Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Location__c</fullName>
        <formula>TEXT(SO_Order__r.Opportunity.SO_Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ABS_Comments__c</fullName>
        <label>ABS - Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MOT_Comments__c</fullName>
        <label>MOT - Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Programme__c</fullName>
        <formula>IF(ISBLANK(SO_Order__r.Opportunity.SO_Programme__c), $Label.SO_Not_Applicable, SO_Order__r.Opportunity.SO_Programme__r.Name)</formula>
        <label>Programme</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Body_Style__c</fullName>
        <formula>SO_Order__r.SO_Body_Style__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Body Style</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paint_Comments__c</fullName>
        <label>Paint - Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Series_Name__c</fullName>
        <formula>SO_Order__r.SO_Series_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Series Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Speedometer__c</fullName>
        <formula>TEXT(SO_Order__r.Opportunity.SO_Speedometer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speedometer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_ABS_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ABS - Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_ABS_Forecast__c</fullName>
        <label>ABS - Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_ABS_Original__c</fullName>
        <label>ABS - Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Build_Colour__c</fullName>
        <formula>SO_Order__r.Opportunity.SO_Build_Colour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Build Colour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Build_Number__c</fullName>
        <label>Build Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_MOT_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MOT Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Engine_Number__c</fullName>
        <formula>SO_Order__r.Opportunity.SO_Vehicle__r.OUV_Engine_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engine Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Hand_of_Drive__c</fullName>
        <formula>TEXT(SO_Order__r.Opportunity.SO_Hand_of_Drive__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hand of Drive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Start_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Opportunity_Id__c</fullName>
        <formula>SO_Order__r.OpportunityId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Start_Forecast__c</fullName>
        <label>Start - Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Start_Original__c</fullName>
        <label>Start - Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Workshop_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workshop Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SO Classic Operations</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Snagging_Comments__c</fullName>
        <label>Snagging - Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Production_Year__c</fullName>
        <formula>SO_Order__r.SO_Production_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Secondary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use for Secondary Work Order</description>
        <label>Secondary Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SO Classic Operations</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SO Classic Admin</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SO Classic Finance</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SO Classic Sales</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SO Classic Sales (Service)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Product_Offering__c</fullName>
        <formula>TEXT(SO_Order__r.Opportunity.SO_Product_Offering__c)</formula>
        <label>Product Offering</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Stage_1_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strip &amp; Parts/BiW - Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Stage_1_Forecast__c</fullName>
        <label>Strip &amp; Parts/BiW - Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Stage_1_Original__c</fullName>
        <label>Strip &amp; Parts/BiW - Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Stage_2_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chassis/PreBuild/Build - Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Stage_2_Forecast__c</fullName>
        <label>Chassis/PreBuild/Build - Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Stage_2_Original__c</fullName>
        <label>Chassis/PreBuild/Build - Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Stage_3_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paint - Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Stage_3_Forecast__c</fullName>
        <label>Paint - Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_Stage_3_Original__c</fullName>
        <label>Paint - Original</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SO_ABS_Slippage_Days__c</fullName>
        <formula>SO_ABS_Forecast__c - SO_ABS_Original__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ABS - Slippage (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Pinewood_Job_Card__c</fullName>
        <label>Pinewood Job Card</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Build_Colour_Shade__c</fullName>
        <formula>SO_Order__r.Opportunity.SO_Build_Colour_Shade__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Build Colour Shade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Is_Secondary_Owner__c</fullName>
        <description>Use for Secondary Work Order List view</description>
        <formula>SO_Secondary_Owner__c  ==  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Secondary Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_ABS_Forecast_Change__c</fullName>
        <label>ABS - Forecast Change</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Days_to_Build_Start__c</fullName>
        <description>No. of days to actual build start from work order creation date</description>
        <formula>SO_Start_Forecast__c - DATEVALUE(CreatedDate)</formula>
        <label>Days to Build Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Donor_Hand_of_Drive__c</fullName>
        <formula>TEXT(SO_Order__r.Opportunity.SO_Vehicle__r.SO_Hand_of_Drive__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor Hand of Drive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Registration_Number__c</fullName>
        <formula>SO_Order__r.Opportunity.SO_Vehicle__r.OUV_Registration_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Start_Slippage_Days__c</fullName>
        <formula>SO_Start_Forecast__c - SO_Start_Original__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start - Slippage (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Build_Interior_Colour__c</fullName>
        <formula>SO_Order__r.Opportunity.SO_Build_Interior_Colour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Build Interior Colour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Stage_1_Slippage_Days__c</fullName>
        <formula>SO_Stage_1_Forecast__c -  SO_Stage_1_Original__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strip &amp; Parts/BiW - Slippage (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Stage_2_Slippage_Days__c</fullName>
        <formula>SO_Stage_2_Forecast__c - SO_Stage_2_Original__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chassis/PreBuild/Build - Slippage (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Stage_3_Slippage_Days__c</fullName>
        <formula>SO_Stage_3_Forecast__c - SO_Stage_3_Original__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paint - Slippage (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Start_Forecast_Change__c</fullName>
        <label>Start - Forecast Change</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strip_Parts_BiW_Comments__c</fullName>
        <label>Strip &amp; Parts/BiW - Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Additional_Spec_Details__c</fullName>
        <formula>SO_Order__r.Opportunity.SO_Additional_Spec_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Spec Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Stage_1_Forecast_Change__c</fullName>
        <label>Strip &amp; Parts/BiW - Forecast Change</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Stage_2_Forecast_Change__c</fullName>
        <label>Chassis/PreBuild/Build - Forecast Change</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Stage_3_Forecast_Change__c</fullName>
        <label>Paint - Forecast Change</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engine_Gearbox_Trim_Comments__c</fullName>
        <label>Engine, Gearbox, Trim - Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Bespoke_Paint_Requirements__c</fullName>
        <label>Bespoke Paint Requirements</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chassis_PreBuild_Build_Comments__c</fullName>
        <label>Chassis/PreBuild/Build - Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SO_Bespoke_Exterior_Requirements__c</fullName>
        <label>Bespoke Exterior Requirements</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Bespoke_Interior_Requirements__c</fullName>
        <label>Bespoke Interior Requirements</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Donor_Primary_Exterior_Colour__c</fullName>
        <formula>TEXT(SO_Order__r.Opportunity.SO_Vehicle__r.SO_Primary_Exterior_Colour__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Donor Primary Exterior Colour</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>SO_New_Build</fullName>
        <active>true</active>
        <label>New Build</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Donor_Build</fullName>
        <active>true</active>
        <label>Donor Build</label>
    </recordTypes>
    <recordTypes>
        <fullName>SO_Bespoke_Build</fullName>
        <active>true</active>
        <label>Bespoke Build</label>
    </recordTypes>
    <validationRules>
        <fullName>SO_ABS_Is_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>SO_ABS_Complete__c &amp;&amp;  ISCHANGED( SO_ABS_Forecast__c ) &amp;&amp;  NOT ( ISCHANGED(SO_ABS_Complete__c ) )</errorConditionFormula>
        <errorDisplayField>SO_ABS_Forecast__c</errorDisplayField>
        <errorMessage>Cannot change the forecast once complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Build_is_Started</fullName>
        <active>true</active>
        <errorConditionFormula>SO_Start_Started__c &amp;&amp;  ISCHANGED( SO_Start_Forecast__c ) &amp;&amp; NOT( ISCHANGED (SO_Start_Started__c ) )</errorConditionFormula>
        <errorDisplayField>SO_Start_Forecast__c</errorDisplayField>
        <errorMessage>Cannot change the forecast once Start</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Stage_1_is_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>SO_Stage_1_Complete__c &amp;&amp;  ISCHANGED( SO_Stage_1_Forecast__c ) &amp;&amp; NOT( ISCHANGED (SO_Stage_1_Complete__c ) )</errorConditionFormula>
        <errorDisplayField>SO_Stage_1_Forecast__c</errorDisplayField>
        <errorMessage>Cannot change the forecast once complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Stage_2_is_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>SO_Stage_2_Complete__c &amp;&amp;  ISCHANGED( SO_Stage_2_Forecast__c ) &amp;&amp; NOT( ISCHANGED (SO_Stage_2_Complete__c ) )</errorConditionFormula>
        <errorDisplayField>SO_Stage_2_Forecast__c</errorDisplayField>
        <errorMessage>Cannot change the forecast once complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Stage_3_is_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>SO_Stage_3_Complete__c &amp;&amp;  ISCHANGED( SO_Stage_3_Forecast__c ) &amp;&amp; NOT( ISCHANGED (SO_Stage_3_Complete__c ) )</errorConditionFormula>
        <errorDisplayField>SO_Stage_3_Forecast__c</errorDisplayField>
        <errorMessage>Cannot change the forecast once complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Stage_4_is_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>SO_Stage_4_Complete__c &amp;&amp;  ISCHANGED( SO_Stage_4_Forecast__c ) &amp;&amp; NOT( ISCHANGED (SO_Stage_4_Complete__c ) )</errorConditionFormula>
        <errorDisplayField>SO_Stage_4_Forecast__c</errorDisplayField>
        <errorMessage>Cannot change the forecast once complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Stage_5_is_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>SO_Stage_5_Complete__c &amp;&amp;  ISCHANGED( SO_Stage_5_Forecast__c ) &amp;&amp; NOT( ISCHANGED (SO_Stage_5_Complete__c ) )</errorConditionFormula>
        <errorDisplayField>SO_Stage_5_Forecast__c</errorDisplayField>
        <errorMessage>Cannot change the forecast once complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Prevent_ABS_Uncomplete</fullName>
        <active>true</active>
        <errorConditionFormula>NOT (SO_ABS_Complete__c ) &amp;&amp;  ISCHANGED ( SO_ABS_Complete__c ) &amp;&amp; NOT(  $Permission.SO_Reset_Work_Order_Completed  )</errorConditionFormula>
        <errorDisplayField>SO_ABS_Complete__c</errorDisplayField>
        <errorMessage>You do not have permission to reset the completed status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Prevent_MOT_Uncomplete</fullName>
        <active>true</active>
        <errorConditionFormula>NOT ( SO_MOT_Complete__c ) &amp;&amp;  ISCHANGED ( SO_MOT_Complete__c ) &amp;&amp; NOT(  $Permission.SO_Reset_Work_Order_Completed  )</errorConditionFormula>
        <errorDisplayField>SO_MOT_Complete__c</errorDisplayField>
        <errorMessage>You do not have permission to reset the completed status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Validate_ABS_Forecast_Date</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNULL(SO_ABS_Forecast__c)) &amp;&amp; (SO_Stage_5_Forecast__c &gt; SO_ABS_Forecast__c || SO_Stage_4_Forecast__c &gt; SO_ABS_Forecast__c || SO_Stage_3_Forecast__c &gt; SO_ABS_Forecast__c || SO_Stage_2_Forecast__c &gt; SO_ABS_Forecast__c || SO_Stage_1_Forecast__c &gt; SO_ABS_Forecast__c || SO_Start_Forecast__c &gt; SO_ABS_Forecast__c)</errorConditionFormula>
        <errorMessage>ABS Forecast cannot be earlier than any build stage forecast.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Prevent_Past_ABS_Forecast_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( SO_ABS_Forecast__c ) &amp;&amp; SO_ABS_Forecast__c &lt; TODAY() &amp;&amp; SO_ABS_Complete__c == FALSE &amp;&amp; ((NOT(ISCHANGED(SO_ABS_Complete__c ))) || ($Permission.SO_Reset_Work_Order_Completed &amp;&amp; ISCHANGED(SO_ABS_Complete__c ) ) )</errorConditionFormula>
        <errorDisplayField>SO_ABS_Forecast__c</errorDisplayField>
        <errorMessage>Forecast date cannot be in past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Validate_Build_Stage_date_value</fullName>
        <active>true</active>
        <errorConditionFormula>SO_Stage_1_Forecast__c &gt; SO_Stage_2_Forecast__c || 
SO_Stage_1_Forecast__c &gt; SO_Stage_3_Forecast__c || 
SO_Stage_1_Forecast__c &gt; SO_Stage_4_Forecast__c || 
SO_Stage_1_Forecast__c &gt; SO_Stage_5_Forecast__c || 
SO_Stage_2_Forecast__c &gt; SO_Stage_3_Forecast__c || SO_Stage_2_Forecast__c &gt; SO_Stage_4_Forecast__c || SO_Stage_2_Forecast__c &gt; SO_Stage_5_Forecast__c || SO_Stage_3_Forecast__c &gt; SO_Stage_4_Forecast__c || 
SO_Stage_3_Forecast__c &gt; SO_Stage_5_Forecast__c || 
SO_Stage_4_Forecast__c &gt; SO_Stage_5_Forecast__c</errorConditionFormula>
        <errorMessage>Build stages must have sequential forecast dates. Please check your forecast dates to ensure each stage does not have a forecast date before any earlier stage forecast.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Prevent_Past_Start_Forecast_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( SO_Start_Forecast__c ) &amp;&amp; SO_Start_Forecast__c &lt; TODAY() &amp;&amp; SO_Start_Started__c == FALSE &amp;&amp; ((NOT(ISCHANGED(SO_Start_Started__c ))) || ($Permission.SO_Reset_Work_Order_Completed &amp;&amp; ISCHANGED(SO_Start_Started__c ) ) )</errorConditionFormula>
        <errorDisplayField>SO_Start_Forecast__c</errorDisplayField>
        <errorMessage>Forecast date cannot be in past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Prevent_Past_Stage_1_Forecast_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( SO_Stage_1_Forecast__c ) &amp;&amp; SO_Stage_1_Forecast__c &lt; TODAY() &amp;&amp; SO_Stage_1_Complete__c == FALSE &amp;&amp; ((NOT(ISCHANGED(SO_Stage_1_Complete__c ))) || ($Permission.SO_Reset_Work_Order_Completed &amp;&amp; ISCHANGED(SO_Stage_1_Complete__c ) ) )</errorConditionFormula>
        <errorDisplayField>SO_Stage_1_Forecast__c</errorDisplayField>
        <errorMessage>Forecast date cannot be in past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Prevent_Past_Stage_2_Forecast_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( SO_Stage_2_Forecast__c ) &amp;&amp; SO_Stage_2_Forecast__c &lt; TODAY() &amp;&amp; SO_Stage_2_Complete__c == FALSE &amp;&amp; ((NOT(ISCHANGED(SO_Stage_2_Complete__c ))) || ($Permission.SO_Reset_Work_Order_Completed &amp;&amp; ISCHANGED(SO_Stage_2_Complete__c ) ) )</errorConditionFormula>
        <errorDisplayField>SO_Stage_2_Forecast__c</errorDisplayField>
        <errorMessage>Forecast date cannot be in past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Prevent_Past_Stage_3_Forecast_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( SO_Stage_3_Forecast__c ) &amp;&amp; SO_Stage_3_Forecast__c &lt; TODAY() &amp;&amp; SO_Stage_3_Complete__c == FALSE &amp;&amp; ((NOT(ISCHANGED(SO_Stage_3_Complete__c ))) || ($Permission.SO_Reset_Work_Order_Completed &amp;&amp; ISCHANGED(SO_Stage_3_Complete__c ) ) )</errorConditionFormula>
        <errorDisplayField>SO_Stage_3_Forecast__c</errorDisplayField>
        <errorMessage>Forecast date cannot be in past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Prevent_Past_Stage_4_Forecast_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( SO_Stage_4_Forecast__c ) &amp;&amp; SO_Stage_4_Forecast__c &lt; TODAY() &amp;&amp; SO_Stage_4_Complete__c == FALSE &amp;&amp; ((NOT(ISCHANGED(SO_Stage_4_Complete__c ))) || ($Permission.SO_Reset_Work_Order_Completed &amp;&amp; ISCHANGED(SO_Stage_4_Complete__c ) ) )</errorConditionFormula>
        <errorDisplayField>SO_Stage_4_Forecast__c</errorDisplayField>
        <errorMessage>Forecast date cannot be in past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SO_Prevent_Past_Stage_5_Forecast_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( SO_Stage_5_Forecast__c ) &amp;&amp; SO_Stage_5_Forecast__c &lt; TODAY() &amp;&amp; SO_Stage_5_Complete__c == FALSE &amp;&amp; ((NOT(ISCHANGED(SO_Stage_5_Complete__c ))) || ($Permission.SO_Reset_Work_Order_Completed &amp;&amp; ISCHANGED(SO_Stage_5_Complete__c ) ) )</errorConditionFormula>
        <errorDisplayField>SO_Stage_5_Forecast__c</errorDisplayField>
        <errorMessage>Forecast date cannot be in past</errorMessage>
    </validationRules>
</CustomObject>